# music-etl

./: ### getting-started-etl.md  ### outline-etl.md  .gitignore  DestinationDDL.sql  ETL.md  ProcessFlow.md  ProjectPlan.md  UseCases.md  pyproject.toml  pytest.ini  requirements.txt
src/adapters/: __init__.py
src/adapters/mappers/: __init__.py  domain_to_sqlserver.py  musicbrainz_to_domain.py
src/adapters/postgres/: __init__.py  connection.py  repository.py
src/adapters/sqlserver/: __init__.py  connection.py  repository.py
src/application/: __init__.py
src/application/services/: __init__.py  etl_service.py  orchestrator.py  simple_examples.py
src/core/: __init__.py  models.py
src/core/ports/: __init__.py  destination_repository.py  etl_ports.py  mapper.py  source_repository.py
src/infra/: __init__.py  config.py  logging.py
src/music_etl.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/scripts/: run_etl.py
tests/integration/: __init__.py  load_genre_test_harness.py
tests/unit/: __init__.py  conftest.py  test_genre_etl.py
tools/: check_imports.py
