[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "music-etl"
version = "0.0.1"
description = "ETL to move MusicBrainz data into MusicCollection"
authors = [
  { name = "You", email = "you@example.com" }
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
